raffia/tests/error/selectors/invalid-nth-matcher-2.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but found `<ident>`
  ┌─ invalid-nth-matcher-2.css:1:16
  │
1 │ :nth-child(odd ofa) {}
  │                ^^^


